Fix UnsupportedOperationException on startup in DolphinLearnDataInitializer causing 502 Bad Gateway